# uv-monorepo-exps

./: pyproject.toml
libs/p1/: pyproject.toml
libs/p1/p1_new/: __init__.py
libs/p2/: pyproject.toml
libs/p2/src/p2/: __init__.py
libs/p3/: pyproject.toml
libs/p3/p3/: __init__.py
libs/p3/src/p3/: __init__.py
