[project]
name = "p2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CAranda", email = "carlos.aranda@clibia.com.mx" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
