[project]
name = "p3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CAranda", email = "carlos.aranda@clibia.com.mx" }
]
requires-python = ">=3.12"
dependencies = [
    "p1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
p1 = { workspace = true }
